--- a/xam130_Calculator/xam130_Calculator/xam130_Calculator/MainPage.xaml
+++ b/xam130_Calculator/xam130_Calculator/xam130_Calculator/MainPage.xaml
@@ -4,8 +4,13 @@
              xmlns:local="clr-namespace:xam130_Calculator"
              x:Class="xam130_Calculator.MainPage">
 
-    <Grid Padding="8,0"
-          RowSpacing="1"
+    <ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness">
+            <On Platform="iOS">0,20,0,0</On>
+        </OnPlatform>
+    </ContentPage.Padding>
+
+    <Grid RowSpacing="1"
           ColumnSpacing="1"
           BackgroundColor="Black">
         <Grid.RowDefinitions>
@@ -22,29 +27,30 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.ColumnSpan="4" Text="0" Grid.Row="0" Grid.Column="0" TextColor="White" FontAttributes="Bold" FontSize="48" HorizontalTextAlignment="End" VerticalTextAlignment="Center" LineBreakMode="NoWrap"/>
-        
-        <Button Grid.Row="1" Grid.Column="0" Text="7" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="1" Grid.Column="1" Text="8" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="1" Grid.Column="2" Text="9" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="1" Grid.Column="3" Text="/" BackgroundColor="Orange" TextColor="White" FontSize="38" BorderRadius="0"/>
 
-        <Button Grid.Row="2" Grid.Column="0" Text="4" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="2" Grid.Column="1" Text="5" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="2" Grid.Column="2" Text="6" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="2" Grid.Column="3" Text="x" BackgroundColor="Orange" TextColor="White" FontSize="38" BorderRadius="0"/>
+        <Label x:Name="resultText" Grid.ColumnSpan="4" Text="0" Grid.Row="0" Grid.Column="0" TextColor="White" FontAttributes="Bold" FontSize="48" HorizontalTextAlignment="End" VerticalTextAlignment="Center" LineBreakMode="NoWrap"/>
 
-        <Button Grid.Row="3" Grid.Column="0" Text="1" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="3" Grid.Column="1" Text="2" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="3" Grid.Column="2" Text="3" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="3" Grid.Column="3" Text="-" BackgroundColor="Orange" TextColor="White" FontSize="38" BorderRadius="0"/>
+        <Button Grid.Row="1" Grid.Column="0" Text="7" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="1" Grid.Column="1" Text="8" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="1" Grid.Column="2" Text="9" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="1" Grid.Column="3" Text="/" BackgroundColor="{x:Static local:SharedResources.OpButtonBkColor}" TextColor="White" FontSize="38" BorderRadius="0" Clicked="OnSelectOperator"/>
 
-        <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Text="0" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="4" Grid.Column="3" Text="-" BackgroundColor="Orange" TextColor="White" FontSize="38" BorderRadius="0"/>
+        <Button Grid.Row="2" Grid.Column="0" Text="4" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="2" Grid.Column="1" Text="5" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="2" Grid.Column="2" Text="6" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="2" Grid.Column="3" Text="x" BackgroundColor="{x:Static local:SharedResources.OpButtonBkColor}" TextColor="White" FontSize="38" BorderRadius="0" Clicked="OnSelectOperator"/>
 
-        <Button Grid.Row="5" Grid.Column="0"  Text="C" BackgroundColor="Gray" TextColor="Black" FontSize="38" BorderRadius="0"/>
-        <Button Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" Text="=" BackgroundColor="Orange" TextColor="White" FontSize="38" BorderRadius="0"/>
+        <Button Grid.Row="3" Grid.Column="0" Text="1" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="3" Grid.Column="1" Text="2" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="3" Grid.Column="2" Text="3" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="3" Grid.Column="3" Text="-" BackgroundColor="{x:Static local:SharedResources.OpButtonBkColor}" TextColor="White" FontSize="38" BorderRadius="0" Clicked="OnSelectOperator"/>
 
+        <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="0" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button x:Name="decimalPointButton" Grid.Row="4" Grid.Column="2" BackgroundColor="White" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnSelectNumber"/>
+        <Button Grid.Row="4" Grid.Column="3" Text="+" BackgroundColor="{x:Static local:SharedResources.OpButtonBkColor}" TextColor="White" FontSize="38" BorderRadius="0" Clicked="OnSelectOperator"/>
+
+        <Button Grid.Row="5" Grid.Column="0"  Text="CE" BackgroundColor="Gray" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnClear"/>
+        <Button Grid.Row="5" Grid.Column="1"  Text="C" BackgroundColor="Gray" TextColor="Black" FontSize="38" BorderRadius="0" Clicked="OnClear"/>
+        <Button Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="±" BackgroundColor="{x:Static local:SharedResources.OpButtonBkColor}" TextColor="White" FontSize="38" BorderRadius="0" Clicked="OnCalculate"/>
     </Grid>
-
 </ContentPage>
